# rx_switcher

./: .appveyor.yml  .gitattributes  .travis.yml  CMakeLists.txt  README.md
cmake/: FindRandomX.cmake  randomx.cmake
rxswitcher/: jconf.cpp  jconf.hpp  params.hpp  version.cpp
rxswitcher/cli/: cli-miner.cpp
rxswitcher/misc/: console.cpp  console.hpp  executor.cpp  executor.hpp  jext.hpp
rxswitcher/net/: jpsock.cpp  jpsock.hpp  socket.cpp
xmrstak/: jconf.cpp  jconf.hpp  params.hpp  version.cpp
xmrstak/cli/: cli-miner.cpp
xmrstak/misc/: environment.hpp  executor.cpp  executor.hpp
xmrstak/net/: jpsock.cpp  jpsock.hpp  msgstruct.hpp  socket.cpp
